# exchange

./: .gitignore  README.md
apps/api/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apps/api/scripts/: run_api.sh
apps/api/src/: test.py
apps/api/src/api/: cli.py  main.py
apps/api/src/api/core/: config.py
apps/api/src/api/routers/: health.py  orders.py
apps/api/src/api/services/: matching.py
apps/frontend/web/: .gitignore  package-lock.json  package.json  tailwind.config.js
apps/frontend/web/src/: app.css
apps/frontend/web/src/lib/actions/: reveal.ts
apps/frontend/web/src/lib/api/: client.ts  type.ts
apps/frontend/web/src/lib/components/: FAQ.svelte  Footer.svelte  Header.svelte  InvestmentCard.svelte
apps/frontend/web/src/routes/: +layout.svelte  +page.svelte
apps/frontend/web/src/routes/api/orderbook/dubai_resi/: +server.ts
apps/frontend/web/src/routes/api/orders/: +server.ts
apps/frontend/web/src/routes/dubai_resi/: +layout.svelte  +page.svelte  +page.ts  test  v2_file
apps/frontend/web/src/routes/marketplace/: +page.svelte
apps/frontend/web/src/routes/privacy/: +page.svelte
engine/matching_engine/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  matching_engine.cpp  matching_engine.h
engine/matching_engine/include/matching/: book.hpp  c_api.h  engine.hpp  events.hpp  order.hpp  types.hpp
engine/matching_engine/legacy/: orderbook.cpp  orderbook.hpp
engine/matching_engine/python/: pyproject.toml
engine/matching_engine/python/matching_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
engine/matching_engine/src/: book.cpp  c_api.cpp  engine.cpp  main.cpp  order.cpp
